--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 black pytest pytest-cov pre-commit
+        pip install mypy flake8 black pytest pytest-cov pre-commit
         pip install -r requirements.txt
 
     - name: Lint with pre-commit
